--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,9 @@ dependencies {
     //okhttp
     implementation 'com.squareup.okhttp3:okhttp:4.10.0'
 
+    //glide
+    implementation 'com.github.bumptech.glide:glide:4.15.0'
+
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
