--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,12 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.SecondActivity">
+
+
+        </activity>
+
+        <activity android:name=".activity.CompassActivity"></activity>
     </application>
 
 </manifest>
