更新和优化

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,10 @@
             </intent-filter>
         </activity>
 
+        <activity android:name=".activity.SecondActivity">
+
+        </activity>
+
     </application>
 
 </manifest>
