--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,18 +81,21 @@ android {
 }
 
 
+
 dependencies {
 
     //引入内部库
     implementation fileTree(include: ['*.jar','*.aar'], dir: 'libs')
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.3'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.5.3'
 
     def navigationVersion = "2.4.0"
     runtimeOnly 'androidx.core:core-ktx:1.9.0'
     implementation 'com.google.android.material:material:1.8.0'
 //    noinspection GradleDependency
-    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
+/*    implementation "androidx.navigation:navigation-fragment-ktx:$navigationVersion"
 //    noinspection GradleDependency
-    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"
+    implementation "androidx.navigation:navigation-ui-ktx:$navigationVersion"*/
 
     //rxjava
     implementation 'io.reactivex.rxjava3:rxandroid:3.0.2'
