--- a/settings.gradle
+++ b/settings.gradle
@@ -15,6 +15,8 @@ dependencyResolutionManagement {
     }
 }
 
+//includeBuild用于build插件
 rootProject.name = "WIfiDemo1"
 include ':app'//模块需要加冒号
 includeBuild 'versionPlugin'
+includeBuild 'DexCodeInsertPluginTest'
