--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,7 +53,7 @@
 
         <activity
             android:name=".activity.CompassActivity"
-            android:screenOrientation="userPortrait"
+            android:screenOrientation="sensorLandscape"
             >
 
         </activity>
