--- a/app/build.gradle
+++ b/app/build.gradle
@@ -105,6 +105,8 @@ dependencies {
 
     //glide
     implementation 'com.github.bumptech.glide:glide:4.15.0'
+    //apache 通用类
+    implementation 'commons-io:commons-io:2.12.0'
 
     //EventBus
     implementation 'org.greenrobot:eventbus:3.3.0'
