--- a/app/build.gradle
+++ b/app/build.gradle
@@ -126,9 +126,17 @@ dependencies {
     implementation "com.squareup.retrofit2:converter-gson:$retrofit"
     implementation "com.squareup.retrofit2:adapter-rxjava2:$retrofit"
 
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.11.0'
+
     def paging_version = "3.1.1"
 
     implementation "androidx.paging:paging-runtime:$paging_version"
+
+    //异步layoutInflater
+    implementation "androidx.asynclayoutinflater:asynclayoutinflater:1.0.0"
+
+    //autofill
+    implementation "androidx.autofill:autofill:1.1.0"
 
 /*    implementation(Deps.dependencies.ijkplayerJava){
         exclude module: 'ijkplayer-java-0.8.8-runtime'
