--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.class
 *.jar
 *.aar
-.gradle
+*/.gradle
 /local.properties
 /.idea/caches
 /.idea/libraries
@@ -11,7 +11,7 @@
 /.idea/navEditor.xml
 /.idea/assetWizardSettings.xml
 .DS_Store
-/build
+*/build
 /app/release/
 /gradle/wrapper/gradle-wrapper.jar
 /captures
