--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -64,6 +64,23 @@
 
         </activity>
 
+        <activity android:name=".activity.TabPageActivity"
+            android:exported="true"
+            >
+
+        </activity>
+        <activity android:name=".activity.TestActivity"
+            android:exported="true"
+            >
+
+        </activity>
+
+        <provider
+            android:authorities="MyContentProvider"
+            android:name=".contentProvider.MyContentProvider">
+
+        </provider>
+
     </application>
 
 </manifest>
